refactor: Remove video download functionality to keep extension lightweight
- Remove video extraction logic from tweet-extractor.ts
- Update media counting to exclude videos across all modules
- Disable video download in media-downloader.ts
- Update UI text to remove video references (images, avatars only)
- Update i18n messages in both English and Chinese
- Keep extension focused on text and image collection for optimal performance
- Maintain code simplicity and avoid complexity of video handling

This change aligns with the extension's core mission of lightweight tweet archiving.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -40,7 +40,7 @@
     "description": "Label for file format checkboxes."
   },
   "settingsDownloadMedia": {
-    "message": "Download media (images, videos, avatars)",
+    "message": "Download media (images, avatars)",
     "description": "Label for download media checkbox."
   },
   "actionsSectionTitle": {
